@@ -675,6 +675,8 @@ unsigned int TimeToSeed(void); /* datetime.c */
 # include <process.h> /* for getpid */
 #endif
 
+const char* get_workspace_name();  /* from startup.c */
+
 void setup_Rmainloop(void)
 {
     volatile int doneit;
@@ -914,9 +916,12 @@ void setup_Rmainloop(void)
 	doneit = 1;
 	R_InitialData();
     }
-    else
-	R_Suicide(_("unable to restore saved data in .RData\n"));
-
+    else {
+    	if (! SETJMP(R_Toplevel.cjmpbuf)) {
+	    warning(_("unable to restore saved data in %s\n"), get_workspace_name());
+	}
+    }
+    
     /* Initial Loading is done.
        At this point we try to invoke the .First Function.
        If there is an error we continue. */
